# li-sync

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  README.md  main.py  pyproject.toml
doc/: plan.md
src/li_sync/: cli.py  compare.py  excludes.py  review_tui.py  state_db.py
src/limsync/: cli.py  config.py  endpoints.py  modals.py  models.py  planner_apply.py  remote_helper.py  review_actions.py  review_tui.py  scanner_remote.py  ssh_pool.py  state_db.py  tree_builder.py
tests/: conftest.py  test_compare.py  test_excludes.py  test_planner_apply.py  test_tree_builder.py  test_tree_scenarios.py
