[project]
name = "limsync"
version = "0.1.0"
description = "Bidirectional interactive Dropbox-like sync over SSH"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "blake3~=1.0",
    "paramiko~=4.0",
    "pathspec~=1.0",
    "rich~=14.3",
    "textual~=7.5",
    "typer~=0.23.1",
]

[project.scripts]
limsync = "limsync.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/limsync"]

[dependency-groups]
dev = [
    "pre-commit~=4.2",
    "pytest~=8.4",
]
